# roi_align_cpp

./: CMakeLists.txt  README.md  roi_align.py
data/: align_feat.npy  align_rois.npy
src/: main.cc
translation/: backword.cpp  forward.cpp
